--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -62,7 +62,7 @@ kable(sample_n(df, size=5)$name, col.names='item')
 include_graphics('figure/1_shopping.png')
 ```
 
-The items on Tesco's 'Have You Forgotten?' list are recommendations. They are only a few of them: five. The question is: which five items and in what order? In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). Even if they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplifies a transformation in forms of ordering. In its re-writing of the list, the recommender system reassembles individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things.   A major contemporary form of ordering, the recommender system can be found in many  forms of news, media, entertainment, marketing, and advertising.
+The items on Tesco's 'Have You Forgotten?' list are recommendations. They are only a few of them: five. The question is: which five items and in what order? In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). Even if they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplifies a transformation in forms of ordering. In its re-writing of the list, the recommender system reassembles individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things.   A major contemporary form of ordering, the recommender system can be found in many  forms of news, media, entertainment, marketing, and advertising. Tesco's recommender systems differs greatly from others associated with Amazon, Netflix or Ebay. Grocery shopping is a high-frequency, multi-purchase shopping practice and the potential for recommendations proliferates accordingly. 
 
 
 Despite being titled 'Have You Forgotten?' Tesco's recommender system  focuses on 'conversion events.' If a shopper does buy a recommended item, 'conversion' has occurred.  From a supermarket perspective, high-value conversion are desirable. There is little value in successfully recommending small or cheap items such as rubber bands or toothpicks. Conversion events, when they occur, confirm the power of predictive analytics to change the world in some way. From a sociological perspective, the significance of conversion events is far less obvious. In the name of conversion events, recommender systems stage an epistemic-operational transformation central to big data. In conversion events,  predictive analytics happens in the world.  The tendency of things to realize certain events -- what Popper terms the 'propensities of things' [@Popper_1990, 11] -- happens  through data practices.   Data in concert with calculation, models, infrastructures, and experiments, affords apprehension, visibility and management of associative propensities in the world.
@@ -170,37 +170,34 @@ Even if `apriori`  elicits associations between things, it struggles with the pr
 
 Items in the `Groceries` dataset proliferate into a Tesco's list of branded variations. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items (see Figure \@ref(fig:tesco-ex)).  There is, I would suggest, a logistic propensity in things that recommender systems encounter in the ways of global supply chains. The multiple listed  in the `Grocery` dataset becomes more open in this setting through new impersonal intersections that must be bounded and ordered. The proliferation of things on the shelves of supermarket or grocery warehouse confronts produces a combinatorial problem for data miners. `r total` products (actually Patel mentioned 200,000 products) can be combined in a vast number of ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Some of this vast number of possible shopping lists are highly unlikely in terms of typical purchasing patterns, but potentially valuable as recommendations. 
 
-Amidst this proliferation of possibles multiple, the recommender system  starts to become a site of ordering -- in both senses of that term -- of things and people together in shopping lists. They are less the inscriptions of a discrete agent than an effect of an environment teeming with possible combinations and complementarities, a surplus of associations that the market needs to both maintain and limit. For instance, given that Tesco lists more than 1000 chicken products on its site, how can a customer practically discriminate between chicken products? Patel mentioned that some people log on and go straight to the checkout, allowing the recommender system to supply them with the suggestions that they then move to the shopping basket. A `r total` list of items is quite hard to list let alone read. Going straight to the recommendation list is the predictive equivalent of using an old shopping list and only adding new items when needed. 
+## Ordering relevance through personhood or thinghood?
 
-## Ordering relevance through personhood
+Combinatorial surplus, however, does not exhaust what might be found in the data. The relevancy model that DunnHumby implemented for Tesco (as for so many other  businesses) seeks to balance the tensions between proliferating associations and relative closure. It responds to the problem of finding an ordering in which the propensities of things as commodities and the propensities of people mingle with each other, without overflowing  the site of their  ordering encounter, the list.[^181.1] Big data discourse in its promissory mode  attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schönberger_2013]. As Turow and co-authors conclude in their account of transformation of retail space: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public force' [@Turow_2015, 476]. 
 
-Combinatorial surplus, however, does not exhaust what might be found in the data. The relevancy model that DunnHumby has implemented for Tesco (as for so many other online businesses) seeks to balance the tensions between proliferating associations and relative closure. It responds to the problem of a world where the propensities of things and the propensities of people mingle with each other, yet threaten to disorder the list, the site of their mutual ordering.[^181.1] Big data discourse in its promissory mode attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schönberger_2013]. The ontological transformation that media theorists such as Hansen suggests actually play out somewhat more conventionally: the associative propensities of things in the shopping list (as constructed by a recommender system) come together with forms of personhood associated with buying. A model of personhood based on purchase data delimits the propensities of things. 
-
-[^181.1]: Rather than seeing predictive analytics as a closed form of an open world, I am suggesting that we might begin to locate it in the joint effectuations or intersections within models.
-
-Patel described the data that Tesco keeps on grocery purchases: 'We have 52 weeks of purchase data for each customer.' These transformations have been widely discussed in the context of big data, where questions of who has how much data are usually most prominent (see [@Kitchin_2014]). In terms of the ways that lists order the world, the amount of data is not perhaps not so important as the way in which list-making is re-ordered via a model of personhood. 
-
-It uses many shopping lists to identify associations between things and then uses the strongest associations to recommend additions to a current list. The 'relevancy model,' however, tries to do something different. 
-
-Hansen attributes 'real potential' to data. In terms that somewhat echo big data epistemics, data has an associative propensity, according to Hansen:
+Mark Hansen offers a different perspective on what might happen in these ordering encounters. Hansen attributes 'real potential' to data. Hansen attributes an associative propensity to data:
 
 > [S]urrounding any delimited predictive system is a larger field of data -- what I elsewhere call a “surplus of sensibility” -- that, viewed speculatively, indexes the causal efficacy of the total situation within which this delimited system operates. (Effectively, the latter gains its reliability from closing off this larger surplus of sensibility, thereby transforming an always excessive propensity into a [provisionally] closed dataset.) Because it affords data that exceed whatever any given predictive system might include, the data of the world’s causal efficacy -- the data constituting its real potentiality -- always and in principle facilitates knowledge that cannot be restricted to any particular agenda [@Hansen_2015a, 126-7].
 
-The underlying contrast between an open world and a 'provisionally closed dataset' is both enabling and limiting. Hansen's account opposes closed prediction to the open propensities of a data-world. A closed set is surrounded and conditioned by an open set teeming with potentials. If we think of the  new model that Patel describes as the delimited (or delimiting?) system within   the larger surplus of sensibility, how would that help us understand what the 'Have you forgotten?' recommendations do? It enables us to understand -- as we will see next -- what the Tesco relevancy model borrows from the world. It limits, on the other hand, our understanding of how predictive analytics, or any other ordering device, themselves remain open, require configuration, and only exist amidst technical ensembles whose operation remains obscure.   
+Many affirmative and critical analyses of big data and predictive analytics highlight the divisive social orderings implemented through personalization. For good reason, they attend to changes in personhood.  Hansen, by contrast, seeks to conceive of the potential of data to support or provoke different relations to the world. Even if the underlying contrast between an open world and a 'provisionally closed dataset' limits the account in ways that I will explore, the ontological transformation  Hansen describes  involves people, commodity-things, and infrastructures. The recommender system generates common codings for  the associative propensities of things, the logistical value-chains of supermarket commerce and  the forms of personhood associated with shopping. A model of personhood based on purchase data delimits the propensities of things. 
+
+[^181.1]: Rather than seeing predictive analytics as a closed form of an open world, I am suggesting that we might begin to locate it in the joint effectuations or intersections within models.
+
+If we think of the  new model that Patel describes as the delimited (or delimiting?) system within   the larger surplus of sensibility, how would the idea of a predictive system as a provisional enclosure of the world's causal efficacy, its 'surplus of sensibility' (a terms that carries some connotations of the critical political economy of surplus value) help us understand what the 'Have you forgotten?' recommendations do? It enables us to understand -- as we will see next -- what the Tesco relevancy model borrows from the world. By contrast, despite its ontological ambitions, it limits our understanding of how predictive analytics  themselves exist amidst technical ensembles whose operation remains obscure yet central to contemporary worlds.   
 
 ```{r models}
 include_graphics('figure/patel_compares_models.png')
 ```
 
-Patel introduced the relevancy model with a graph familiar to machine learning and statistical modelling. (A sketch of her graph appears in Figure \@ref(fig:models).)  The graph plots the _precision_ -- the proportion of the recommended products that customers actually purchase -- for several different models. In media theoretical terms, the graph indexes the 'causal efficacy' of a recommender system, its capacity to include and transform propensities or 'real potentialities' into operational knowledge.   The graph compares the old rule-based recommender systems with some of the relevancy-model alternatives -- logistic regression, random forests, and a few others -- in terms of their predictions and how those predictions turned out. Patel dismissed most of the models quite quickly and focused only on one, the logistic regression model, which did better than other alternatives. Why did she say little about the model, which after all, produces the probabilistic predictions on which everything in the recommendation list depends and hence the conversion experience? Her interest lay in the precision of the recommendations, and, crucially for our purposes, in how 'most of the gain comes from thinking of good features.'
+Patel described the data that Tesco keeps on grocery purchases: 'We have 52 weeks of purchase data for each customer.' These transformations have been widely discussed in the context of big data, where questions of who has how much data are usually most prominent (see [@Kitchin_2014]). In terms of the ways that lists order the world, the amount of data is not perhaps not so important as the way in which list-making is re-ordered via a model of personhood. Patel introduced the new relevancy model with a graph familiar to machine learners and statistical modellers. (A sketch of her graph appears in Figure \@ref(fig:models).)  The graph plots the _precision_ -- the proportion of the recommended products that customers actually purchase -- for several different models. In Hansen's media theoretical terms, the graph indexes the 'causal efficacy' of the recommender system, its capacity to include and transform propensities or 'real potentialities' into operational knowledge.   The graph compares the old rule-based recommender systems with some of the relevancy-model alternatives -- logistic regression, random forests, and a few others -- in terms of their predictions and how those predictions turned out. Patel dismissed most of the models quite quickly and focused only on one, the logistic regression model, which did better than other alternatives. Why did she say little about the model, which after all, produces the probabilistic predictions on which everything in the recommendation list depends and hence the conversion experience? Her interest lay in the precision of the recommendations, and, crucially for our purposes, in how 'most of the gain comes from thinking of good features.'
 
-The models Patel so briefly mentioned are all classifiers, predictive models that spatially order  variables in a dataset as a high dimensional vector space. In the vector space, classification means drawing a decision boundary between points that henceforth belong to different classes of things [@Mackenzie_2015]. Here the classes of things are binary: `recommended` or `not recommended,` and for many of the models shown in the graph, membership of a class is expressed as a probability.  The logistic regression model generates probabilities for each product for each customer. Patel did not articulate the implication of the contrast between the left and right hand side of the graphic. Although the statistical framing appears explicitly (e.g. in measuring the precision of  recommender systems), the underlying shift to a statistical model is barely mentioned. In becoming predictive, the 'Have You Forgotten?' recommendations have included a version of the social in the form of a  model that seeks to identify relations between variables.  The relevance of recommendations pivots on the apprehension of social order by a model. 
+The models Patel so briefly mentioned are all classifiers, predictive models that spatially order  variables in a dataset as a high dimensional vector space. Operating in the vector space, models classify people and events. Much of the operational formation of the classifier models received scant reference in Patel's presentation. It is likely that in DunnHumby's models the classifying model at the heart of the recommender system constructs a decision boundary in vector space between points that belong to different classes of things [@Mackenzie_2015]. The classes of things are binary: `recommended` or `not recommended,` and for many of the models shown in the graph, membership of a class is expressed as a probability.  The logistic regression model generates probabilities for each product for each customer. Patel did not articulate the implication of the contrast between the left and right hand side of the graphic. Although the statistical framing appears explicitly (e.g. in measuring the precision of  recommender systems), the underlying shift to a statistical model is barely mentioned. In becoming predictive, the 'Have You Forgotten?' recommendations have included a version of the social in the form of a  model that seeks to identify relations between variables.  The relevance of recommendations pivots on the apprehension of social order by a model. 
+
 
 ## Sparsity: output 20 recommendations from 200,000 products
 
-Note that neither the infrastructure that marshals the Tesco customer data  - Patel will mention `Hadoop` -- nor the predictive analytic device -- the logistic regression model -- loom very large in the conversion of the recommender system. 'Most of the gain comes,' Patel observes, 'from thinking of good features.' While this is almost a truism in big data practice (see, for instance, [@Domingos_2012]), what counts as a good feature in a shopping list? 
+Note that neither the data analytic infrastructure that processes  Tesco customer data  - Patel will mention `Hadoop` -- nor the predictive analytic device -- the logistic regression model -- loom very large in the conversion of the recommender system. 'Most of the gain comes,' Patel observes, 'from thinking of good features.' While this is almost a truism in big data practice (see, for instance, [@Domingos_2012]), what counts as a good feature in a shopping list? 
 
-A  very brief comment from Patel -- 'we have lots of zeros' -- points to the locus of this thinking: the vast, nearly empty matrix of customer-product associations. Given that most things in Tesco remain relatively inert in relation to each other, a matrix that records association between individual people and different products is bound to be mostly empty.   Say Tesco has 1 million online customers. Each of online  shopper has bought some selection of the 200,000 products. But the product-customer matrix, the basic vector-space in which all recommender systems operate, remain very sparse and unpopulated. The customer-product data matrix will be `r format(1e6 * 2e5)` in size. Given that any one customer is likely to only have bought 100 different products, the probability matrix will be close to `r format(100-(100/2e5)*100, 2)`% empty. The data is, as Patel put it, 'massively unbalanced', and such imbalance would heavily bias recommendation towards commonly and only impersonally relevant suggestions, suggestions that would likely not produce the desired conversion experience. Rather than a surplus of sensibility, predictive models, we might say, encounter their own dearth of sensibility in the data. 
+Rather than a surplus of sensibility, predictive models often encounter a dearth of sensibility in the data. A  very brief comment from Patel -- 'we have lots of zeros' -- points to the difficult terrain of  'good feature' thinking: the vast, nearly empty matrix of customer-product associations. Given that most things in Tesco remain relatively unknown to each other and to customers. A matrix that records associations between individual people and different products is bound to be mostly empty. Say Tesco has 1 million online customers. Each online  shopper has bought some selection of the 200,000 products. The customer-product data matrix will be `r format(1e6 * 2e5)` in size.  The product-customer matrix, the basic vector-space in which all recommender systems operate, remains very sparse and unpopulated. Given that any one customer is likely to only have bought 100 or so different products, the probability matrix will be close to `r format(100-(100/2e5)*100, 2)`% empty. The data is, as Patel put it, 'massively unbalanced' (any dataset where the items of interest are much rarer than some normal values is said to be unbalanced) and such imbalance would heavily bias the recommender system towards common and only impersonally relevant suggestions, suggestions that might  not produce the desired conversion experience. 
 
 ```{r sparsity-ex, echo=FALSE, cache=TRUE, fig.margin=FALSE, fig.cap ='Sparsity of the customer-product association matrix' }
 library(ggplot2)
@@ -215,7 +212,7 @@ ggplot(melted, aes(x = Var2, y = Var1, fill = value)) + geom_tile() +
 
 Since so many people buy milk, the recommendation system might end up always recommending milk products. So the data needs to be 'corrected' by, as Patel reports, removing -- under-sampling -- some of the data for common purchases.   Secondly, even if a recommendation system finds uncommon items that are good recommendations, they should neither be too cheap ('low spend'), nor, as we will see too similar to what the customer has already ordered.
 
-Amidst this imbalance, distortion and deficit of sensibility given in the data, 'thinking of good feature' -- ways of traversing the data -- becomes central. For our purposes, the exact details of these features matter less than the way in which propensities become probabilities. The dataset, as we will see, will not be practically treated as 'closed,' as Hansen puts it. Although it undergoes acts of enclosure (for instance, in the transformation of the customer-product matrix into vector space), these acts are not conclusive. 'Thinking of good features' potentially re-opens the dataset and sometimes completely transforms it. This thinking, which I suggest occurs mostly in quite obscure yet central zones of data practice, is highly mixed. It combines experimental techniques, infrastructural dynamics, seasonal and daily temporalities, and above all, an ongoing engagement with probabilities and their fungibilities.
+Given this imbalance, distortion and deficit of sensibility in the data, 'thinking of good features' -- ways of traversing the data -- becomes central. For our purposes, the exact details of these features matter less than attending to the way in which propensities become probabilities. The dataset, as we will see, will not be practically treated as 'closed,' as Hansen puts it. Although it undergoes acts of enclosure (for instance, in the transformation of the customer-product matrix into vector space), these acts are not conclusive. 'Thinking of good features' potentially re-opens the dataset and sometimes completely transforms it. This thinking, which I suggest occurs mostly in quite obscure yet central zones of data practice, is highly mixed. It combines experimental techniques, infrastructural dynamics, seasonal and daily temporalities, and above all, an ongoing engagement with probabilities and their fungibilities.
 
 ## Experimental settings: A/B allocation and uplift
 
